--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
-  "name": "create-react-app-lambda",
-  "version": "0.5.0",
+  "name": "react-lambda",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "apollo-boost": "^0.1.13",
+    "apollo-server-lambda": "^2.0.1",
+    "graphql": "^0.13.2",
+    "react": "^16.3.1",
+    "react-apollo": "^2.1.11",
+    "react-dom": "^16.3.1",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "run-p build:**",
-    "build:app": "react-scripts build",
+    "start:lambda": "netlify-lambda serve src/lambda",
+    "build": "react-scripts build",
     "build:lambda": "netlify-lambda build src/lambda",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "schema:publish": "apollo schema:publish --endpoint=http://localhost:9000/graphql",
+    "schema:start-and-publish": "start-server-and-test start:lambda http-get://localhost:9000/graphql?query={__typename} schema:publish",
+    "schema:check": "apollo schema:check --endpoint=http://localhost:9000/graphql",
+    "schema:start-and-check": "start-server-and-test start:lambda http-get://localhost:9000/graphql?query={__typename} schema:check"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "proxy": {
+    "/.netlify/functions": {
+      "target": "http://localhost:9000",
+      "pathRewrite": {
+        "^/\\.netlify/functions": ""
+      }
+    }
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "devDependencies": {
-    "netlify-lambda": "^1.4.5",
-    "npm-run-all": "^4.1.5"
+    "apollo": "^1.7.0",
+    "start-server-and-test": "^1.7.0",
+    "netlify-lambda": "^0.4.0"
   }
 }
